--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<html>
-<head>
-<meta name="yandex-verification" content="23af867d70beed10" />
-<meta http-equiv="refresh" content="0;URL=http://t.me/life_refactoring" />
-</head>
-</html>
+<meta http-equiv="refresh" content="0;URL=https://t-do.ru/life_refactoring" />
