--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL=https://t-do.ru/life_refactoring" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/life_refactoring" />
